Added Zeit Online support

--- a/extension/chrome/src/_locales/en/messages.json
+++ b/extension/chrome/src/_locales/en/messages.json
@@ -3,7 +3,7 @@
     "message": ":Diskuss"
   },
   "appDescription": {
-    "message": "With :Diskuss, you finally can :diskuss uncensored on the web"
+    "message": "With :Diskuss, you finally can again :diskuss uncensored on the web"
   },
   "settingsHeaderDisplay": {
     "message": "Link position on the web page"
