--- a/extension/firefox/install.txt
+++ b/extension/firefox/install.txt
@@ -17,6 +17,6 @@
 
     <!-- Front End MetaData -->
     <em:name>:Diskuss</em:name>
-    <em:description>With :Diskuss, you finally can discuss again uncensored on the web</em:description>
+    <em:description>With :Diskuss, you finally can again :diskuss uncensored on the web</em:description>
     <em:creator></em:creator>
     
